# simple-chatapp

./: README.md  docker-compose.yml  package.json
app/: app.json  package.json
bot/: main.py  pyproject.toml
server/: index.js  package.json
web/: .env  docker-compose.yml  package.json
web/app/: layout.tsx
web/app/(public)/account/: layout.tsx
web/app/(public)/account/login/: page.tsx
web/app/(public)/account/register/: page.tsx
web/app/(secure)/: layout.tsx  page.tsx
web/app/(secure)/users/: page.tsx
web/app/(secure)/users/add/: page.tsx
web/app/(secure)/users/edit/[id]/: page.tsx
web/app/_components/: Alert.tsx  Nav.tsx  NavLink.tsx
web/app/_components/users/: AddEdit.tsx
web/app/_dtos/: IAddress.ts  IBooking.ts  IDoctors.ts  IOpeningHour.ts
web/app/_helpers/client/: useFetch.ts
web/app/_helpers/server/: auth.ts  db.ts
web/app/_helpers/server/api/: api-handler.ts  error-handler.ts  jwt-middleware.ts  validate-middleware.ts
web/app/_helpers/server/user/: index.ts  user.ts  users-repo.ts
web/app/_services/: index.ts  useAlertService.ts  useDoctorService.ts  useUserService.ts
web/app/api/account/login/: route.ts
web/app/api/account/logout/: route.ts
web/app/api/account/register/: route.ts
web/app/api/doctors/: route.ts
web/app/api/doctors/[id]/: route.ts
web/app/api/users/[id]/: route.ts
web/app/api/users/current/: route.ts
